# lottolab

./: .env.example  .gitignore  LICENSE  README.md  analyze_daily_grand.py  compare_games.py  compare_strategies.py  deep_simulation_analysis.py  fetch_all_daily_grand_months.py  fetch_daily_grand_batch.py  fetch_olg_dailygrand_complete.py  final_strategy.sh  generate_numbers.py  get_complete_daily_grand.py  import_daily_grand.py  import_daily_grand_csv.py  import_latest_data.py  parse_lottonumbers_html.py  parse_olg_api.py  parse_olg_json.py  pyproject.toml  requirements.txt  scrape_daily_grand.py  scrape_daily_grand_complete.py  scrape_lottonumbers_dailygrand.py  scrape_lottonumbers_fixed.py
backend/: main.py
backend/config/: settings.py  settings_template.py
backend/database/: base.py
backend/models/: __init__.py  draw.py  draw.py_BEFOREDAILYGRAND  portfolio_training.py  saved_portfolio.py  simulation.py  simulation.py_BEFOREDAILYGRAND  strategy.py  user.py
backend/repositories/: portfolio_persistence_repository.py
backend/schemas/: auth.py
backend/services/: auth_service.py  multi_strategy_portfolio_service.py  optimized_portfolio_service.py  (+11 more)
frontend/: index.html  index.html_BEFOREDAILYGRANDSIMULATION  index.html_BeforeDailyGrand  login.html
scripts/: add_strategies.py  analyze_walkforward_results.py  check_latest_draws.py  check_lotto649_tickets.py  compare_strategies_walkforward.py  create_tables.py  create_user.py  generate_tickets_with_best_strategy.py  generate_weekly_tickets.py  import_sample_data.py  reset_admin_password.py  test_connection.py
(+38 files in other folders)
